<resources>
    <string name="app_name">Camera2</string>
    <string name="camera2_setting">camera2setting</string>
    <string name="key_language">language</string>
    <string name="album_name">camera2_album</string>
    <string name="info_default">I stand in front of SurfaceView.</string>
    <string name="zero">0.00</string>
    <string name="rotation_vector_4">Rotation Vector 4:</string>
    <string name="rotation_vector_3">Rotation Vector 3:</string>
    <string name="rotation_vector_2">Rotation Vector 2:</string>
    <string name="rotation_vector_1">Rotation Vector 1:</string>
    <string name="a_m_title">Accelerometer Sensor\nMagnetometer Sensor</string>
    <string name="azimuth">Azimuth(N/S/E/W)</string>
    <string name="pitch">Pitch(up/down)</string>
    <string name="roll">Roll(left/right)</string>
    <string name="float_format">%1$.2f</string>
    <string name="error_matrix">error</string>
</resources>
